--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "livechat",
-  "homepage": "https://vegabrandon.github.io/livechat",
   "version": "0.1.0",
+  "homepage": "https://vegabrandon.github.io/livechat/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
